


syntax = "proto3";

package chat;

option go_package = "../src/generated/chat";

message CreateRoomRequest {
  string room_name = 1;
}

message CreateRoomResponse {
  string room_id = 1;
}

message JoinRoomRequest {
  string room_id = 1;
  string user_name = 2;
}

message JoinRoomResponse {
  bool success = 1;
}

message ChatMessage {
  string room_id = 1;
  string user_name = 2;
  string message = 3;
}

service ChatService {
  rpc CreateRoom(CreateRoomRequest) returns (CreateRoomResponse);
  rpc JoinRoom(JoinRoomRequest) returns (JoinRoomResponse);
  rpc SendMessage(stream ChatMessage) returns (stream ChatMessage);
}